--- a/webapp/views/configuration/dataset.html
+++ b/webapp/views/configuration/dataset.html
@@ -146,6 +146,9 @@
       <div class="box-header with-border">
         <h3 class="box-title">{{ i18n.__('{[ type|capitalize ]} Data Registration') }}</h3>
       </div>
+
+      <terrama2-dcp-importer semantics="dataSeries.semantics" ></terrama2-dcp-importer>
+
       <!-- /.box-header -->
       <div style="display: block;" class="box-body" ui-view>
 
