--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -3,8 +3,6 @@
 {% set tabActive = "services" %}
 {% set reload = restart === true || restart === "true" %}
 
-{% block ngApp %}ng-app="terrama2.administration.services"{% endblock %}
-
 {% block styles %}
 <style type="text/css">
   .pull-cell-left {
@@ -15,7 +13,7 @@
 </style>
 {% endblock %}
 
-{% block title %} TerraMA² {{ i18n.__('Services Handling') }} {% endblock %}
+{% block title %} TerraMA² {% endblock %}
 
 {% block javascripts %}
 
@@ -24,21 +22,22 @@
     service: "{[ service ]}",
     restart: {[ reload ]},
     message: "{[ message ]}"
-  }
+  };
 </script>
 <!-- Socket.io -->
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 
-<script src="/javascripts/angular/services.js"></script>
+<!--<script src="/javascripts/angular/services.js"></script>
 <script src="/javascripts/angular/table/table.js"></script>
 <script src="/javascripts/angular/alert-box/directives.js"></script>
-<script src="/javascripts/angular/services/service.js"></script>
+<script src="/javascripts/angular/services/service.js"></script>-->
+<script type="text/javascript" src="/javascripts/angular/dist/tm2.js"></script>
 
 {% endblock %}
 
 {% block content %}
 
-<div ng-controller="ListController as ctrl">
+<div ng-controller="TerraMA2Controller as ctrl">
   <terrama2-box title="title" helper="helperMessage" css="boxCss">
     <div class="col-md-12">
       <div class="col-md-12">
