--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -242,9 +242,9 @@
   <!-- Internationalization -->
   <script src="/bower_components/i18n-node-angular/i18n-node-angular.js"></script>
   <!-- TerraMA² Angular Module -->
-  <script src="/javascripts/angular/app.js"></script>
+  <!--<script src="/javascripts/angular/app.js"></script>-->
   <!-- Flags -->
-  <script src="/javascripts/angular/countries/countries-directive.js"></script>
+  <!--<script src="/javascripts/angular/countries/countries-directive.js"></script>-->
   {# Block for handling TerraMA2 javascripts include #}
   {% block javascripts %}
 
