--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -31,6 +31,8 @@
   <!-- TerraMA2 -->
   <link rel="stylesheet" type="text/css" href="/stylesheets/terrama2.css">
 
+  <link rel="stylesheet" type="text/css" href="/bower_components/angular-datatables/dist/css/angular-datatables.min.css">
+
   {# Block for including TerraMA2 specific stylesheets #}
   <style>
     .skin-blue .sidebar-menu>li:hover>a, .skin-blue .sidebar-menu>li.active>a {
@@ -245,6 +247,10 @@
   <script src="/javascripts/angular/app.js"></script>
   <!-- Flags -->
   <script src="/javascripts/angular/countries/countries-directive.js"></script>
+
+  <script src="/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
+  <script src="/bower_components/angular-datatables/dist/angular-datatables.min.js"></script>
+
   {# Block for handling TerraMA2 javascripts include #}
   {% block javascripts %}
 
