--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -13,6 +13,8 @@
 </style>
 {% endblock %}
 
+{% block ngApp %} ng-app="terrama2.administration.services" {% endblock %}
+
 {% block title %} TerraMA² {% endblock %}
 
 {% block javascripts %}
@@ -31,13 +33,12 @@
 <script src="/javascripts/angular/table/table.js"></script>
 <script src="/javascripts/angular/alert-box/directives.js"></script>
 <script src="/javascripts/angular/services/service.js"></script>-->
-<script type="text/javascript" src="/javascripts/angular/dist/tm2.js"></script>
 
 {% endblock %}
 
 {% block content %}
 
-<div ng-controller="TerraMA2Controller as ctrl">
+<div ng-controller="ListController">
   <terrama2-box title="title" helper="helperMessage" css="boxCss">
     <div class="col-md-12">
       <div class="col-md-12">
