--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -10,7 +10,9 @@
 {% set MENU_URLS["status"] = {name: 'Status', url: "/configuration/status", icon: "fa-feed"} %}
 
 <!DOCTYPE html>
-<html {% block ngApp %}ng-app="terrama2"{% endblock %} i18n-locale="{{ locale }}">
+<html {% block ngApp %}ng-app="terrama2"{% endblock %} i18n-locale="{{ locale }}"
+      ng-controller="{% block ngController%}TerraMA2Controller{% endblock %}"
+      data-language="{[ acceptedLanguage() ]}">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -64,9 +66,7 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body class="hold-transition skin-blue sidebar-mini {% if (collapsed) %} sidebar-collapse {% endif %}{% block bodyClass %}{% endblock %}"
-      ng-controller="{% block ngController%}TerraMA2Controller{% endblock %}"
-      data-language="{[ acceptedLanguage() ]}">
+<body class="hold-transition skin-blue sidebar-mini {% if (collapsed) %} sidebar-collapse {% endif %}{% block bodyClass %}{% endblock %}">
 
   <div class="wrapper">
 
@@ -230,9 +230,8 @@
           }
         }).success(function(data) {
           collapsed = data.collapsed;
-          console.log(data);
         }).error(function(err) {
-          console.log(err);
+          
         });
       });
     });
@@ -245,10 +244,15 @@
   <!--<script src="/javascripts/angular/app.js"></script>-->
   <!-- Flags -->
   <!--<script src="/javascripts/angular/countries/countries-directive.js"></script>-->
+  <!-- Socket.io -->
+  <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+
   {# Block for handling TerraMA2 javascripts include #}
   {% block javascripts %}
 
   {% endblock %}
+
+  <script type="text/javascript" src="/javascripts/angular/dist/tm2.js"></script>
 
 </body>
 </html>
