--- a/webapp/views/configuration/providers.html
+++ b/webapp/views/configuration/providers.html
@@ -10,62 +10,10 @@
 
 {% block javascripts %}
 
-<script src="/javascripts/angular/services.js"></script>
-<script src="/javascripts/angular/table/table.js"></script>
-<script src="/javascripts/angular/alert-box/directives.js"></script>
 <script type="text/javascript">
-  angular.module("terrama2.providers", ['terrama2', 'terrama2.services', 'terrama2.components.messagebox', 'terrama2.table'])
-    .controller("DataProviderController", ['$scope', '$http', 'DataProviderFactory', 'i18n', function($scope, $http, DataProviderFactory, i18n) {
-      i18n.ensureLocaleIsLoaded()
-        .then(function() {
-          $scope.i18n = i18n;
-          $scope.model = [];
-          $scope.linkToAdd = "/configuration/providers/new";
-          $scope.fields = [
-            {key: "name", as: i18n.__("Name")},
-            {key: "description", as: i18n.__("Description")}
-          ];
-          $scope.remove = function(object) {
-            return "/api/DataProvider/" + object.id + "/delete";
-          };
-          $scope.link = function(object) {
-            return "/configuration/providers/edit/" + object.id;
-          };
-          $scope.iconProperties = {};
-
-          $scope.loading = true;
-          $scope.errorFound = false;
-          $scope.extra = {
-            removeOperationCallback: function(err, data) {
-              $scope.display = true;
-              if (err) {
-                $scope.alertLevel = "alert-danger";
-                $scope.alertBox.message = err.message;
-                return;
-              }
-
-              $scope.alertLevel = "alert-success";
-              $scope.alertBox.message = data.name + i18n.__(" removed");
-            }
-          };
-          $scope.method = "{[ method ]}";
-          $scope.alertLevel = "alert-success";
-          $scope.alertBox = {
-            title: i18n.__("Data Server"),
-            message: "{[ message ]}"
-          };
-          $scope.resetState = function() { $scope.display = false; };
-          $scope.display = {% if message %}true{% else %} false{% endif %};
-
-          DataProviderFactory.get().success(function(dataProviders) {
-            $scope.model = dataProviders;
-          }).error(function(err) {
-            console.log("Err in retrieving DataProviders " + err);
-          }).finally(function() {
-            $scope.loading = false;
-          });
-        });
-    }]);
+  var configuration = {
+    message: "{[ message ]}"
+  };
 </script>
 
 {% endblock %}
