working with grunt (common and countries)

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -216,7 +216,7 @@
         event.preventDefault();
       });
 
-      var collapsed = {[ collapsed ]};
+      // var collapsed = {[ collapsed ]};
 
       $("#collapseButton").click(function(event) {
         var self = this;
@@ -252,7 +252,7 @@
 
   {% endblock %}
 
-  <script type="text/javascript" src="/javascripts/angular/dist/tm2.js"></script>
+  <!--<script type="text/javascript" src="/javascripts/angular/dist/tm2.js"></script>-->
 
 </body>
 </html>
