updating grunt with angular

--- a/webapp/views/administration/service.html
+++ b/webapp/views/administration/service.html
@@ -37,7 +37,7 @@
 
 {% block content %}
 
-<div class="col-md-12" ng-controller="RegisterUpdate as ctrl">
+<div class="col-md-12" ng-controller="ServiceRegisterUpdate as ctrl">
   <terrama2-box title="i18n.__('Service Registration')">
     <div class="row">
       <div class="col-md-12">
