--- a/webapp/views/configuration/projects.html
+++ b/webapp/views/configuration/projects.html
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block content %}
-<div ng-controller="ListController">
+<div ng-controller="ProjectListController">
   <terrama2-box title="i18n.__('Projects')">
     <div class="row">
       <div class="col-md-12">
