--- a/webapp/views/configuration/provider.html
+++ b/webapp/views/configuration/provider.html
@@ -37,7 +37,7 @@
 
 {% block content %}
 
-<div ng-controller="RegisterController">
+<div ng-controller="DataProviderRegisterController">
   <terrama2-box title="i18n.__('Data Server Registration')" handler="serviceX">
     <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     <div class="row">
