--- a/webapp/views/configuration/providers.html
+++ b/webapp/views/configuration/providers.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-<div ng-controller="ListController">
+<div ng-controller="DataProviderListController">
   <terrama2-box title="i18n.__('Data Servers')">
     <div class="row">
       <div class="col-md-12">
