--- a/webapp/views/administration/services.html
+++ b/webapp/views/administration/services.html
@@ -38,7 +38,7 @@
 
 {% block content %}
 
-<div ng-controller="ListController">
+<div ng-controller="ServiceListController">
   <terrama2-box title="title" helper="helperMessage" css="boxCss">
     <div class="col-md-12">
       <div class="col-md-12">
