--- a/webapp/views/configuration/project.html
+++ b/webapp/views/configuration/project.html
@@ -17,7 +17,7 @@
 
 {% block content %}
 
-<div ng-controller="RegisterController">
+<div ng-controller="ProjectRegisterController">
   <terrama2-box title="i18n.__('Project Registration')">
     <div class="col-md-12">
       <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
