views working with grunt

--- a/webapp/views/configuration/views.html
+++ b/webapp/views/configuration/views.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 
-<div ng-controller="ViewList as ctrl">
+<div ng-controller="ViewListController as ctrl">
   <terrama2-box title="i18n.__('Views')">
     <div class="col-md-12">
       <terrama2-alert-box2 handler="ctrl.MessageBoxService.alertBox" close="ctrl.close()"></terrama2-alert-box2>
