--- a/webapp/views/configuration/view.html
+++ b/webapp/views/configuration/view.html
@@ -59,7 +59,7 @@
 
 {% block content %}
 
-<div ng-controller="ViewRegisterUpdate as ctrl">
+<div ng-controller="ViewRegisterUpdateController as ctrl">
   <terrama2-box title="i18n.__(ctrl.isUpdating ? 'View Update' : 'View Registration')">
     <div class="col-md-12">
       <terrama2-alert-box2 handler="ctrl.MessageBoxService.alertBox" close="ctrl.close()"></terrama2-alert-box2>
