adding analysis and geo app with grunt

--- a/webapp/views/configuration/analysis_list.html
+++ b/webapp/views/configuration/analysis_list.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 
-<div ng-controller="ListController">
+<div ng-controller="AnalysisListController">
   <terrama2-box title="i18n.__('Analysis')">
     <div class="col-md-12">
       <terrama2-alert-box alert-level="alertLevel" title="alertBox.title" message="alertBox.message" close="resetState()" display-handler="display"></terrama2-alert-box>
