Adding AdminLte classes to do collapse behavior

--- a/webmonitor/views/layout.html
+++ b/webmonitor/views/layout.html
@@ -61,10 +61,9 @@
           </ul>
           <!-- /.sidebar-menu -->
         </section>
-        <!-- TODO: adjust css menu sidebar when is collapsed
         <div id="mini-toggle" data-toggle="offcanvas">
            <span class="glyphicon glyphicon-menu-left"></span> 
-        </div> -->
+        </div>
         <!-- /.sidebar -->
       </aside>
 
