fixing data series listing grunt

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -228,10 +228,8 @@
           data: {
             collapsed: collapsed
           }
-        }).success(function(data) {
-          collapsed = data.collapsed;
-        }).error(function(err) {
-          
+        }).then(function(response) {
+          collapsed = response.data.collapsed;
         });
       });
     });
