--- a/webapp/views/configuration/analysis_list.html
+++ b/webapp/views/configuration/analysis_list.html
@@ -29,7 +29,7 @@
 <div ng-controller="AnalysisListController">
   <terrama2-box title="i18n.__('Analysis')">
     <div class="col-md-12">
-      <terrama2-alert-box alert-level="alertLevel" title="alertBox.title" message="alertBox.message" close="resetState()" display-handler="display"></terrama2-alert-box>
+      <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
     </div>
 
     <terrama2-table fields="fields" model="model" link="link" icon="icon" icon-properties="iconProperties" 
