--- a/webapp/views/configuration/dynamicDataSeries.html
+++ b/webapp/views/configuration/dynamicDataSeries.html
@@ -64,7 +64,7 @@
 {% endblock %}
 
 {% block content %}
-<div ng-controller="ListController">
+<div ng-controller="DataSeriesListController">
   <terrama2-box title="i18n.__('Dynamic Data Series')">
     <div class="row">
       <div class="col-md-12">
