--- a/webapp/views/configuration/staticData.html
+++ b/webapp/views/configuration/staticData.html
@@ -45,7 +45,7 @@
 
 {% block content %}
 
-<div ng-controller="ListController">
+<div ng-controller="DataSeriesListController">
   <terrama2-box title="i18n.__('Static Data')">
     <div class="row">
       <div class="col-md-12">
