--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -30,8 +30,9 @@
   <link rel="stylesheet" type="text/css" href="/bower_components/intl-tel-input/build/css/intlTelInput.css">
   <!-- TerraMA2 -->
   <link rel="stylesheet" type="text/css" href="/stylesheets/terrama2.css">
-
-  <link rel="stylesheet" type="text/css" href="/bower_components/angular-datatables/dist/css/angular-datatables.min.css">
+  <!-- DataTables -->
+  <link rel="stylesheet" type="text/css" href="/bower_components/datatables/media/css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/bower_components/datatables/media/css/jquery.dataTables.css">
 
   {# Block for including TerraMA2 specific stylesheets #}
   <style>
@@ -239,6 +240,8 @@
       });
     });
   </script>
+  <!-- jQuery DataTables -->
+  <script src="/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
   <!-- Angular JS -->
   <script src="/bower_components/angular/angular.min.js"></script>
   <!-- Internationalization -->
@@ -247,9 +250,6 @@
   <script src="/javascripts/angular/app.js"></script>
   <!-- Flags -->
   <script src="/javascripts/angular/countries/countries-directive.js"></script>
-
-  <script src="/bower_components/datatables/media/js/jquery.dataTables.min.js"></script>
-  <script src="/bower_components/angular-datatables/dist/angular-datatables.min.js"></script>
 
   {# Block for handling TerraMA2 javascripts include #}
   {% block javascripts %}
