--- a/webapp/public/javascripts/angular/data-series/templates/storager.html
+++ b/webapp/public/javascripts/angular/data-series/templates/storager.html
@@ -1,4 +1,4 @@
-<div class="row" ng-controller="StoragerController">
+<div class="row" ng-controller="DataSeriesStoragerController">
 
   <div class="col-md-12">
     <form name="forms.storagerDataForm">
