--- a/webapp/views/configuration/dynamicDataSeries.html
+++ b/webapp/views/configuration/dynamicDataSeries.html
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="col-md-12">
-          <terrama2-alert-box alert-level="alertLevel" title="alertBox.title" message="alertBox.message" close="resetState()" display-handler="display"></terrama2-alert-box>
+          <terrama2-alert-box2 handler="MessageBoxService.alertBox" close="close()"></terrama2-alert-box2>
         </div>
 
         <terrama2-table fields="fields" model="model" link="link" icon-properties="iconProperties" 
