fixing user module

--- a/webapp/public/stylesheets/terrama2.css
+++ b/webapp/public/stylesheets/terrama2.css
@@ -315,6 +315,10 @@ bootstrap-decorator span {
   overflow: auto;
 }
 
+.terrama2-link-disabled {
+  cursor: not-allowed;
+}
+
 /*
   It fixes intersection nav to include check icon
 */
