updating package json and grunt css minification

--- a/webapp/views/base/layout.html
+++ b/webapp/views/base/layout.html
@@ -31,7 +31,7 @@
   <!-- i18n flags -->
   <link rel="stylesheet" type="text/css" href="/bower_components/intl-tel-input/build/css/intlTelInput.css">
   <!-- TerraMA2 -->
-  <link rel="stylesheet" type="text/css" href="/stylesheets/terrama2.css">
+  <link rel="stylesheet" type="text/css" href="/dist/terrama2.min.css">
 
   {# Block for including TerraMA2 specific stylesheets #}
   <style>
@@ -216,7 +216,7 @@
         event.preventDefault();
       });
 
-      // var collapsed = {[ collapsed ]};
+      var collapsed = {[ collapsed ]};
 
       $("#collapseButton").click(function(event) {
         var self = this;
